Fixed Mobile Nav Menu z-index

--- a/assets/styles/modules/Nav/Nav.module.scss
+++ b/assets/styles/modules/Nav/Nav.module.scss
@@ -449,6 +449,7 @@
   height: 100%;
   background-color: rgb(35, 34, 34);
   display: none;
+  z-index: 100;
 
   .mobile_nav_menu_cnt {
     .browse_section {
